# TheDicyKenny

./: .breakpoints  .gitignore  README.md  dice_functions.py  main.py  pyproject.toml
.github/workflows/: manual.yml
cogs/: backflips.py  database_pandas.py  db_functions.py  eightball.py  fate_dice.py
redundant/: db_functions.py
resources/: backflips.json  database.json  dice_functions.py  players.py  redundant.py
