[tool.poetry]
name = "repl_python3_TheDicyKenny-1"
version = "0.1.0"
description = ""
authors = ["RainerToots <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
pandas = "^1.3.4"
replit = "^3.2.4"
tabulate = "^0.8.9"
table2ascii = "^0.1.3"
prettytable = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
